SERVER-66418 fix bug in projection created during dependency analysis